--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,31 +1,64 @@
-# Files in the config/locales directory are used for internationalization and
-# are automatically loaded by Rails. If you want to use locales other than
-# English, add the necessary files in this directory.
-#
-# To use the locales, use `I18n.t`:
-#
-#     I18n.t "hello"
-#
-# In views, this is aliased to just `t`:
-#
-#     <%= t("hello") %>
-#
-# To use a different locale, set it with `I18n.locale`:
-#
-#     I18n.locale = :es
-#
-# This would use the information in config/locales/es.yml.
-#
-# To learn more about the API, please read the Rails Internationalization guide
-# at https://guides.rubyonrails.org/i18n.html.
-#
-# Be aware that YAML interprets the following case-insensitive strings as
-# booleans: `true`, `false`, `on`, `off`, `yes`, `no`. Therefore, these strings
-# must be quoted to be interpreted as strings. For example:
-#
-#     en:
-#       "yes": yup
-#       enabled: "ON"
-
+---
 en:
-  hello: "Hello world"
+  activerecord:
+    attributes:
+      item:
+        description: Description
+        status: Status
+        title: Title
+    errors:
+      messages:
+        blank: can't be blank
+        inclusion: is not included in the list
+      models:
+        item:
+          attributes:
+            status:
+              inclusion: is not included in the possible values. It must be pending or complete
+            title:
+              blank: can't be blank
+          blank: can't be blank
+          inclusion: is not included in the list
+    models:
+      item: Item
+  errors:
+    attributes:
+      status:
+        inclusion: is not included in the list
+      title:
+        blank: can't be blank
+    messages:
+      blank: can't be blank
+      inclusion: is not included in the list
+  items:
+    edit:
+      back: Back to items
+      show: Show Item
+      title: Edit Item
+    form:
+      description: Description
+      error: "{{count}} errors prohibited this item from being saved:"
+      status: Status
+      submit: Save
+      title: Title
+    index:
+      confirm_destroy: Are you sure you want to delete this item?
+      destroy: Destroy
+      edit: Edit
+      new_item: New item
+      no_items_found: No items found
+      show: Show
+      title: Items
+    item:
+      description: Description
+      status: Status
+      title: Title
+    new:
+      back: Back
+      title: New item
+    show:
+      back: Back
+      confirm_destroy: Are you sure you want to delete this item?
+      destroy: Destroy
+      edit: Edit
+      title: Item
