--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -109,8 +109,11 @@ en:
         destroy_confirm: Are you sure you want to delete this list?
         edit: Edit
       new_item: New item
+      filter: Filter
       no_completed_items: No completed items yet. Let's tackle some pending ones!
       no_items_found: Let's start to create items!
+      no_selected_status: All statuses
+      no_items_found_with_status: "No items found with the %{status} status"
     new:
       title: New item
     show:
